--- a/frontendSIGUI/src/app/layout/home/home.component.html
+++ b/frontendSIGUI/src/app/layout/home/home.component.html
@@ -6,7 +6,7 @@
       <button [routerLink]="['/user-zone']" mat-button class="button-nav">
         Home
       </button> 
-      <button [routerLink]="['/map-view']" mat-button class="button-nav">
+      <button [routerLink]="['/geo-view']" mat-button class="button-nav">
         Dados Espaciais
       </button> 
       <p *ngIf="showFiller">teste</p>
