--- a/frontendSIGUI/src/app/layout/authentication/authentication.component.css
+++ b/frontendSIGUI/src/app/layout/authentication/authentication.component.css
@@ -1,5 +1,12 @@
+body{
+    /* background-color: blue; */
+    width: 100%;
+    height: 100%;
+}
+
 .authentication{
-    width: 500px;
+    width: 800px;
     margin: 0 auto;
     margin-top: 100px;
 } 
+
