--- a/frontendSIGUI/src/app/layout/authentication/authentication.component.html
+++ b/frontendSIGUI/src/app/layout/authentication/authentication.component.html
@@ -1,3 +1,5 @@
-<div class="authentication">    
-    <router-outlet></router-outlet>
-</div>
+<body>
+    <div class="authentication">    
+        <router-outlet></router-outlet>
+    </div>
+</body>
