--- a/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.html
@@ -6,8 +6,7 @@
     <app-map [map]="map"></app-map>  
     <p appShowUserAdmLogged>teste</p>
     <div class="teste" >
-        <app-popup-options  [map]="map" (associarInfra)="enableDivAssociationInfra($event)" 
-        (associarCity)="enableDivAssociationCity($event)"></app-popup-options>         
+        <app-popup-options  [map]="map" ></app-popup-options>         
     </div>
     <app-layer-switcher [map]="map"> </app-layer-switcher>
 </div>
