--- a/frontendSIGUI/src/app/layout/home/home.component.html
+++ b/frontendSIGUI/src/app/layout/home/home.component.html
@@ -9,6 +9,9 @@
       <button [routerLink]="['/geo-view']" mat-button class="button-nav">
         Dados Espaciais
       </button> 
+      <button [routerLink]="['/network']" mat-button class="button-nav">
+        Adicionar Redes
+      </button> 
       <p *ngIf="showFiller">teste</p>
       <button (click)="showFiller = !showFiller" mat-button class="button-nav">
         Button teste
