--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup/popup-options-manager/popup-options-manager.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup/popup-options-manager/popup-options-manager.component.html
@@ -8,7 +8,7 @@
             <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Adicionar </button>
         </td>
         <td>                     
-            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Associar </button>
+            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="connectFeatureFromState()"> Associar </button>
         </td>
     </tr>
     <tr *ngIf="hiddenCounty">
@@ -26,7 +26,7 @@
             <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Adicionar </button>
         </td>
         <td>                     
-            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Associar </button>
+            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="connectFeatureFromDistrict()"> Associar </button>
         </td>
     </tr>
     <tr *ngIf="hiddenStreet">
