--- a/frontendSIGUI/src/app/components/maps-components/manager-infrastructure/manager-infrastructure.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/manager-infrastructure/manager-infrastructure.component.html
@@ -17,7 +17,9 @@
                     </mat-form-field>
                 </div>
                 <div class="content-form">
-                   
+                   <app-infrastructure-network>
+                        
+                   </app-infrastructure-network>
                 </div>
             </div>
             <div class="div-item-content-form">
