Gerenciamento de estruturas

--- a/frontendSIGUI/src/app/components/manager-geodata/menu-maneger-geodata/menu-maneger-geodata.component.html
+++ b/frontendSIGUI/src/app/components/manager-geodata/menu-maneger-geodata/menu-maneger-geodata.component.html
@@ -80,9 +80,27 @@
                     <mat-icon>search</mat-icon>
                 </button>
             </div>                       
-            <button [routerLink]="['manager-city']" mat-stroked-button color="primary"> Visualizar Rua</button>
+            <button mat-stroked-button color="primary" (click)="onClickSelectStreet()"> Visualizar Rua</button>
             <button mat-stroked-button color="primary"> Adicionar Arquivo</button>
         </mat-expansion-panel>  
+        <mat-expansion-panel class="mat-accordion-manager" (open)="panelOpenState=true" (false)="panelOpenState=false">
+            <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Logradouros
+                    </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div>
+                <mat-form-field class="search-form-field" appearance="fill">
+                    <mat-label>Buscar por ID</mat-label>
+                    <input matInput placeholder="Consulte ID">
+                </mat-form-field>
+                <button mat-mini-fab color="primary">
+                    <mat-icon>search</mat-icon>
+                </button>
+            </div>                       
+            <button mat-stroked-button color="primary" (click)="onClickSelectPublicPlace()"> Adicionar Logradouro</button>
+            <button mat-stroked-button color="primary"> Adicionar Arquivo</button>
+        </mat-expansion-panel> 
         <mat-expansion-panel class="mat-accordion-manager" (open)="panelOpenState=true" (false)="panelOpenState=false">
             <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -117,6 +135,7 @@
             </div>                       
             <button mat-stroked-button color="primary" (click)="onClickEquipamentFile()"> Visualizar Estruturas</button>
             <button mat-stroked-button color="primary"> Adicionar Arquivo</button>
-        </mat-expansion-panel>               
+        </mat-expansion-panel>    
+
 </mat-accordion>     
 </div> 
