--- a/frontendSIGUI/src/app/components/maps-components/manager-street/manager-street/manager-street.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/manager-street/manager-street/manager-street.component.html
@@ -81,7 +81,7 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>CEP</mat-label>
-                        <input matInput placeholder="Input" formControlName="zipCodeF">
+                        <input matInput placeholder="Input" formControlName="zipCodeD">
                     </mat-form-field>
                 </div>
             </div>
@@ -105,13 +105,7 @@
                         <mat-label>Coordenada</mat-label>
                         <input matInput placeholder="Input" formControlName="geometry">
                     </mat-form-field>
-                </div>   
-                <div class="content-form">
-                    <mat-form-field appearance="fill">
-                        <mat-label>Area do Bairro</mat-label>
-                        <input matInput placeholder="Input" formControlName="areaDistrict">
-                    </mat-form-field>
-                </div>        
+                </div>                        
             </div>           
             <div class="div-item-content-form">
                 <div class="content-form">
