gerenciamento de Associacao

--- a/frontendSIGUI/src/app/components/manager-geodata/menu-maneger-geodata/menu-maneger-geodata.component.html
+++ b/frontendSIGUI/src/app/components/manager-geodata/menu-maneger-geodata/menu-maneger-geodata.component.html
@@ -117,6 +117,7 @@
                 </button>
             </div>                       
             <button mat-stroked-button color="primary" (click)="onClickSelectInfrastructure()">  Visualizar Infraestruturas</button>
+            <button mat-stroked-button color="primary" (click)="getFeatureInfrastructure()">  Consultar Infraestruturas</button>
             </mat-expansion-panel>     
         <mat-expansion-panel class="mat-accordion-manager" (open)="panelOpenState=true" (false)="panelOpenState=false">
             <mat-expansion-panel-header>
