--- a/frontendSIGUI/src/app/components/maps-components/manegerstate/manegerstate.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/manegerstate/manegerstate.component.html
@@ -1,6 +1,6 @@
 <div class="inner-elements-header">
     <div class="inner_elements_body">    
-        <h2>Inserir Arquivos de Municipio</h2>
+        <h2>Gerenciar Arquivos de Estado</h2>
     </div>
 </div>
 <div class="inner_elements_body">  
