--- a/frontendSIGUI/src/app/components/maps-components/infrastructure-network/infrastructure-network.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/infrastructure-network/infrastructure-network.component.html
@@ -6,22 +6,27 @@
             <p> <label>{{labelInfra}}</label> </p>
             <p> <label>{{Associada}}</label> </p>
             <mat-form-field appearance="fill">
+                <mat-label>Serial Number</mat-label>
+                <input matInput placeholder="Input" formControlName="serial_number">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Status</mat-label>
+                <input matInput placeholder="Input" formControlName="status">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
                 <mat-label>Selecionar Network</mat-label>
                 <mat-select formControlName="selectNetwork">
                     <mat-option *ngFor="let network of networks" [value]="network.id">
-                        {{network.name}}
+                        {{network.net_name}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
 
         </mat-card-content>
         <mat-card-actions align="end">
-            <!-- <button mat-fab color="primary" class="upload-btn" (click)="fileUpload.click()">
-                <mat-icon class="white-icon">folder_open</mat-icon>
-            </button>
-            <button mat-fab color="primary">
+            <button type="submit" mat-fab color="primary">
                 <mat-icon class="white-icon">attachment</mat-icon>
-            </button> -->
+            </button>            
         </mat-card-actions>
     </mat-card>  
 </form>
